--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,12 @@
+/*  TAG SELECTORS  */
+
   body {
     background-color: #CCF3EE;
   }
 
-  #heading {
-    background-color: blue;
-    border-style: none;
-    height: 2px;
-  }
-
-  #bio {
-    border-radius: 25px;
-    padding: 20px;
-    border: 2px dotted blue;
-  }
-
-  #breaks {
-    border-style: none;
-    border-top-style: dotted;
-    border-width: 5px;
-    border-color: #069A8E;
-    width: 5%;
-  }
-
-  #ss {
-    border-style: none;
-    background-color: #069A8E;
-    height: 2px;
-  }
-
   ol {
-    text-align: center;
     list-style-position: inside;
+    text-align: center;
   }
 
   h1 {
@@ -39,6 +15,36 @@
   }
   h3
   {
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
     color: #3E64FF;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+  }
+
+/*  CLASS SELECTORS  */
+
+  .heading {
+    background-color: blue;
+    border-style: none;
+    height: 2px;
+  }
+
+    .breaks {
+      border-color: #069A8E;
+      border-style: none;
+      border-top-style: dotted;
+      border-width: 5px;
+      width: 5%;
+    }
+
+    .ss {
+      background-color: #069A8E;
+      border-style: none;
+      height: 2px;
+    }
+
+/*  ID SELECTORS  */
+
+  #bio {
+    border: 2px dotted blue;
+    border-radius: 25px;
+    padding: 20px;
   }
